Use Java 8-compatible test asset reads